// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders a logo component with a custom logo 1`] = `
<img
  alt="Back to homepage"
  className="ui image"
  src="/@@site-logo/logo.cab945d8.svg"
  title="Back to homepage"
/>
`;

exports[`Logo renders a logo component with a custom logo in a non-root url 1`] = `
<a
  className={null}
  href="/"
  onClick={[Function]}
  target={null}
  title="Plone Site"
>
  <img
    alt="Back to homepage"
    className="ui image"
    src="/@@site-logo/logo.cab945d8.svg"
    title="Back to homepage"
  />
</a>
`;

exports[`Logo renders a logo component with default config 1`] = `
<img
  alt="Back to homepage"
  className="ui image"
  src="Logo.svg"
  title="Back to homepage"
/>
`;

exports[`Logo renders a logo component with default config in a non-root url 1`] = `
<a
  className={null}
  href="/"
  onClick={[Function]}
  target={null}
  title="Plone Site"
>
  <img
    alt="Back to homepage"
    className="ui image"
    src="/@@site-logo/logo.cab945d8.svg"
    title="Back to homepage"
  />
</a>
`;
